Remove dependencies from `api` module